2008-09-24  Soren Hauberg  <hauberg@gmail.com>

	* image/imfinfo.m: New function.
	* image/Makefile.in (SOURCES): Add it to the list.

2008-09-24  Ben Abbott  <bpabbott@mac.com>

	* strings/strcat.m: Improve Matlab compatibility for non-character
	data.

2008-09-24  John W. Eaton  <jwe@octave.org>

	* general/interpft.m: Increase tolerance in tests.

2008-09-23  Francesco Potorti`  <Potorti@isti.cnr.it>

	* plot/pcolor.m: Improve doc string.

2008-09-22 Ben Abbott <bpabbott@mac.com>

	* plot/comet.m: New file.
	* plot/Makefile.in (SOURCES): Add it here.

2008-09-22  David Bateman  <dbateman@free.fr>

	* plot/plotmatrix.m: New function.
	* plot/Makefile.in (SOURCES): Add it here.

	* general/quadgk.m: No function count in quadgk and so don't try and
	print it when given trace argument.

2008-09-18  Jaroslav Hajek <highegg@gmail.com>

	* general/blkdiag.m: Skip assignment if rhs is empty.

2008-09-18  Kris Thielemans  <kris.thielemans@csc.mrc.ac.uk>

	* image/imshow.m: Fix for display_range.
	
	* general/interpn.m: Fixe for extrapval and documentation of 
	extrapval.

2008-09-17  David Bateman  <dbateman@free.fr>

	* time/datetick.m: New function.
	* time/Makefile.in (SOURCES): Add it here.
	* time/datestr.m: More careful check for datevec format with 6
	column arguments.
	* plot/__go_draw_axes__ (do_tics_1): Use %.15g format rather than
	%g format. Also use manual mode if xlabelmode is manual.

	* general/cell2mat.m: Backout previous change. Special case 2D
	case for speed.

2008-09-11  David Bateman  <dbateman@free.fr>

	* general/cell2mat.m: Improve the speed.

2008-09-09  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Convert format and use strftime to do most of
	the actual conversion.

2008-09-08  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>

	* plot/plot.m: Doc fix.

2008-09-08  Mark van Rossum  <mvanross@inf.ed.ac.uk>

	* statistics/distributions/binornd.m: Handle zero values of n
	correctly.

2008-09-08  Kai Habel  <kai.habel@gmx.de>
