@@ -1,3 +1,7 @@
+2008-09-24  John W. Eaton  <jwe@octave.org>
+
+	* plot/fplot.m: Call axis after calling plot.
+
 2008-09-24  Soren Hauberg  <hauberg@gmail.com>
 
 	* image/imfinfo.m: New function.
